--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav>
             <ul>
                 <li class="nav_logo">
-                    <h1><a class="nav_logo"  href="#"><img src="image/logo.png" alt="ロゴ画像"></a></h1>
+                    <h1><a class="nav_logo" href="#"><img src="image/logo.png" alt="ロゴ画像"></a></h1>
                 </li>
                 <li><a href="#">Card</a></li>
                 <li><a href="#">News</a></li>
@@ -26,12 +26,48 @@
         </nav>
     </header>
     <main>
-        <section class="main_contents">
-            <div class="main_contents_transparent">
-                <div class="main_contents_wrapper">
+        <section class="contents">
+            <div class="contents_transparent">
+                <div class="contents_wrapper">
                     <h2>一番伝えたいことを書く</h2>
                     <p>リードリードリード</p>
                     <div class="btn"> <a href="#">お問い合わせ</a></div>
+                </div>
+            </div>
+        </section>
+
+        <section class="cards">
+            <div><h2>Card</h2></div>>
+            <div class="card_box">
+                <div class="card">
+                    <img src="image/card-img.png">
+                    <h3>タイトルタイトル</h3>
+                    <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+                </div>
+                <div class="card">
+                    <img src="image/card-img.png">
+                    <h3>タイトルタイトル</h3>
+                    <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+                </div>
+                <div class="card">
+                    <img src="image/card-img.png">
+                    <h3>タイトルタイトル</h3>
+                    <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+                </div>
+                <div class="card">
+                    <img src="image/card-img.png">
+                    <h3>タイトルタイトル</h3>
+                    <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+                </div>
+                <div class="card">
+                    <img src="image/card-img.png">
+                    <h3>タイトルタイトル</h3>
+                    <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+                </div>
+                <div class="card">
+                    <img src="image/card-img.png">
+                    <h3>タイトルタイトル</h3>
+                    <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                 </div>
             </div>
         </section>
