innerを追加していい感じに中央に来るように調整

--- a/index.html
+++ b/index.html
@@ -28,46 +28,52 @@
     <main>
         <section class="contents">
             <div class="contents_transparent">
-                <div class="contents_wrapper">
-                    <h2>一番伝えたいことを書く</h2>
-                    <p>リードリードリード</p>
-                    <div class="btn"> <a href="#">お問い合わせ</a></div>
+                <div class="inner">
+                    <div class="contents_wrapper">
+                        <h2>一番伝えたいことを書く</h2>
+                        <p>リードリードリード</p>
+                        <div class="btn"> <a href="#">お問い合わせ</a></div>
+                    </div>
                 </div>
             </div>
         </section>
 
         <section class="cards">
-            <div><h2>Card</h2></div>>
-            <div class="card_box">
-                <div class="card">
-                    <img src="image/card-img.png">
-                    <h3>タイトルタイトル</h3>
-                    <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+            <div class="inner">
+                <div class="card-title">
+                    <h2>Card</h2>
                 </div>
-                <div class="card">
-                    <img src="image/card-img.png">
-                    <h3>タイトルタイトル</h3>
-                    <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
-                </div>
-                <div class="card">
-                    <img src="image/card-img.png">
-                    <h3>タイトルタイトル</h3>
-                    <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
-                </div>
-                <div class="card">
-                    <img src="image/card-img.png">
-                    <h3>タイトルタイトル</h3>
-                    <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
-                </div>
-                <div class="card">
-                    <img src="image/card-img.png">
-                    <h3>タイトルタイトル</h3>
-                    <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
-                </div>
-                <div class="card">
-                    <img src="image/card-img.png">
-                    <h3>タイトルタイトル</h3>
-                    <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+                <div class="card_box">
+                    <div class="card">
+                        <img src="image/card-img.png">
+                        <h3>タイトルタイトル</h3>
+                        <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+                    </div>
+                    <div class="card">
+                        <img src="image/card-img.png">
+                        <h3>タイトルタイトル</h3>
+                        <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+                    </div>
+                    <div class="card">
+                        <img src="image/card-img.png">
+                        <h3>タイトルタイトル</h3>
+                        <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+                    </div>
+                    <div class="card">
+                        <img src="image/card-img.png">
+                        <h3>タイトルタイトル</h3>
+                        <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+                    </div>
+                    <div class="card">
+                        <img src="image/card-img.png">
+                        <h3>タイトルタイトル</h3>
+                        <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+                    </div>
+                    <div class="card">
+                        <img src="image/card-img.png">
+                        <h3>タイトルタイトル</h3>
+                        <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+                    </div>
                 </div>
             </div>
         </section>
