--- a/ heading.html
+++ b/ heading.html
@@ -10,23 +10,23 @@
 </head>
 <body>
     <div class="inner">
-    <h2>もなかの見出しパターン１</h2>
-    <h2>もなかの見出しパターン２</h2>
-    <h2>もなかの見出しパターン３</h2>
-    <h2>もなかの見出しパターン４</h2>
-    <h2>もなかの見出しパターン５</h2>
-    <h2>もなかの見出しパターン６</h2>
-    <h2>もなかの見出しパターン７</h2>
-    <h2>もなかの見出しパターン８</h2>
-    <h2>もなかの見出しパターン９</h2>
-    <h2>もなかの見出しパターン１０</h2>
-    <h2>もなかの見出しパターン１１</h2>
-    <h2>もなかの見出しパターン１２</h2>
-    <h2>もなかの見出しパターン１３</h2>
-    <h2>もなかの見出しパターン１４</h2>
-    <h2>もなかの見出しパターン１５</h2>
-    <h2>もなかの見出しパターン１６</h2>
-    <h2>もなかの見出しパターン１７</h2>
+    <h2 class="heading01">もなかの見出しパターン１</h2>
+    <h2 class="heading02">もなかの見出しパターン２</h2>
+    <h2 class="heading03">もなかの見出しパターン３</h2>
+    <h2 class="heading04">もなかの見出しパターン４</h2>
+    <h2 class="heading05">もなかの見出しパターン５</h2>
+    <h2 class="heading06">もなかの見出しパターン６</h2>
+    <h2 class="heading07"　>もなかの見出しパターン７</h2>
+    <h2 class="heading08">もなかの見出しパターン８</h2>
+    <h2 class="heading09">もなかの見出しパターン９</h2>
+    <h2 class="heading10">もなかの見出しパターン１０</h2>
+    <h2 class="heading11">もなかの見出しパターン１１</h2>
+    <h2 class="heading12">もなかの見出しパターン１２</h2>
+    <h2 class="heading13">もなかの見出しパターン１３</h2>
+    <h2 class="heading14">もなかの見出しパターン１４</h2>
+    <h2 class="heading15">もなかの見出しパターン１５</h2>
+    <h2 class="heading16">もなかの見出しパターン１６</h2>
+    <h2 class="heading17">もなかの見出しパターン１７</h2>
     </div>
 </body>
 </html>
