見出しパターン10まで

--- a/ heading.html
+++ b/ heading.html
@@ -16,7 +16,7 @@
     <h2 class="heading04">もなかの見出しパターン４</h2>
     <h2 class="heading05">もなかの見出しパターン５</h2>
     <h2 class="heading06">もなかの見出しパターン６</h2>
-    <h2 class="heading07"　>もなかの見出しパターン７</h2>
+    <h2 class="heading07">もなかの<br>見出しパターン７</h2>
     <h2 class="heading08">もなかの見出しパターン８</h2>
     <h2 class="heading09">もなかの見出しパターン９</h2>
     <h2 class="heading10">もなかの見出しパターン１０</h2>
