見出し完成

--- a/ heading.html
+++ b/ heading.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,25 +9,29 @@
     <link rel="stylesheet" href="parts.css">
     <title>Document</title>
 </head>
+
 <body>
     <div class="inner">
-    <h2 class="heading01">もなかの見出しパターン１</h2>
-    <h2 class="heading02">もなかの見出しパターン２</h2>
-    <h2 class="heading03">もなかの見出しパターン３</h2>
-    <h2 class="heading04">もなかの見出しパターン４</h2>
-    <h2 class="heading05">もなかの見出しパターン５</h2>
-    <h2 class="heading06">もなかの見出しパターン６</h2>
-    <h2 class="heading07">もなかの<br>見出しパターン７</h2>
-    <h2 class="heading08">もなかの見出しパターン８</h2>
-    <h2 class="heading09">もなかの見出しパターン９</h2>
-    <h2 class="heading10">もなかの見出しパターン１０</h2>
-    <h2 class="heading11">もなかの見出しパターン１１</h2>
-    <h2 class="heading12">もなかの見出しパターン１２</h2>
-    <h2 class="heading13">もなかの見出しパターン１３</h2>
-    <h2 class="heading14">もなかの見出しパターン１４</h2>
-    <h2 class="heading15">もなかの見出しパターン１５</h2>
-    <h2 class="heading16">もなかの見出しパターン１６</h2>
-    <h2 class="heading17">もなかの見出しパターン１７</h2>
+        <h2 class="heading01">もなかの見出しパターン1</h2>
+        <h2 class="heading02">もなかの見出しパターン2</h2>
+        <h2 class="heading03">もなかの見出しパターン3</h2>
+        <h2 class="heading04">もなかの見出しパターン4</h2>
+        <h2 class="heading05">もなかの見出しパターン5</h2>
+        <h2 class="heading06">もなかの見出しパターン6</h2>
+        <h2 class="heading07">もなかの<br>見出しパターン7</h2>
+        <h2 class="heading08">もなかの見出しパターン8</h2>
+        <h2 class="heading09">もなかの見出しパターン9</h2>
+        <h2 class="heading10">もなかの見出しパターン10</h2>
+        <div class="wrap">
+            <h2 class="heading11">もなかの見出しパターン11</h2>
+        </div>
+        <h2 class="heading12">もなかの見出しパターン12</h2>
+        <h2 class="heading13">もなかの見出しパターン13</h2>
+        <h2 class="heading14">もなかの見出しパターン14</h2>
+        <h2 class="heading15">もなかの見出しパターン15</h2>
+        <h2 class="heading16">もなかの見出しパターン16</h2>
+        <h2 class="heading17">もなかの見出しパターン17</h2>
     </div>
 </body>
+
 </html>
