--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
         <section class="cards">
             <div class="inner">
-                <div class="card-title">
+                <div class="title card-title">
                     <h2>Card</h2>
                 </div>
                 <div class="card_box">
@@ -75,6 +75,65 @@
                         <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
                     </div>
                 </div>
+            </div>
+        </section>
+        <section class="news">
+            <div class="inner">
+                <div class="title card-title">
+                    <h2>News</h2>
+                </div>
+                <div class="topics">
+
+                    <dl>
+                        <dt>2019-01-30</dt>
+                        <dd> <span class="label label1">ラベル１</span>
+                            <p>ニュースニュースニュースニュースニュースニュースニュースニュースニュース
+                        </dd>
+                        </p>
+                    </dl>
+
+                    <dl>
+                        <dt>2019-01-30</dt>
+                        <dd> <span class="label label2">ラベル2</span>
+                            <p>ニュースニュースニュースニュースニュースニュースニュースニュースニュース
+                        </dd>
+                        </p>
+                    </dl>
+
+                    <dl>
+                        <dt>2019-01-30</dt>
+                        <dd> <span class="label label2">ラベル3</span>
+                            <p>ニュースニュースニュースニュースニュースニュースニュースニュースニュース
+                        </dd>
+                        </p>
+                    </dl>
+
+                    <dl>
+                        <dt>2019-01-30</dt>
+                        <dd> <span class="label label1">ラベル1</span>
+                            <p>ニュースニュースニュースニュースニュースニュースニュースニュースニュース
+                        </dd>
+                        </p>
+                    </dl>
+
+                    <dl>
+                        <dt>2019-01-30</dt>
+                        <dd><span class="label label1">ラベル1</span>
+                            <p>ニュースニュースニュースニュースニュースニュースニュースニュースニュース
+                        </dd>
+                        </p>
+                    </dl>
+
+                    <dl>
+                        <dt>2019-01-30</dt>
+                        <dd><span class="label label1">ラベル1</span>
+                            <p>ニュースニュースニュースニュースニュースニュースニュースニュースニュース
+                        </dd>
+                        </p>
+                    </dl>
+
+                </div>
+
             </div>
         </section>
     </main>
