--- a/ button.html
+++ b/ button.html
@@ -11,11 +11,11 @@
 <body>
     <main>
         <div class="button button1"><a href="#">ボタンはこちら1</a></div>
-        <div class="button button2"><a href="#">ボタンはこちら2</a></div>
+        <div class="button button2"><a href="#">ボタンはこちら2<img></a></div>
         <div class="button button3"><a href="#">ボタンはこちら3</a></div>
         <div class="button button4"><a href="#">ボタンはこちら4</a></div>
         <div class="button button5"><a href="#">ボタンはこちら5</a></div>
-       <div class="button6"><a href="#">ボタンはこちら6</a></div>
+        <div class="button6"><a href="#">ボタンはこちら6</a></div>
         <div class="button7"><a href="#">ボタンは<br>こちら7</a></div>
         <div class="button button10"><a href="#">ボタンはこちら10</a></div>
         <div class="button button9"><a href="#">ボタンはこちら9</a></div>
