--- a/ button.html
+++ b/ button.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="button.css">
+    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="/css/button.css">
     <title>Document</title>
 </head>
 <body>
     <main>
         <div class="button button1"><a href="#">ボタンはこちら1</a></div>
-        <div class="button button2"><a href="#">ボタンはこちら2<img></a></div>
+        <div class="button button2"><a href="#">ボタンはこちら2</a></div>
         <div class="button button3"><a href="#">ボタンはこちら3</a></div>
         <div class="button button4"><a href="#">ボタンはこちら4</a></div>
         <div class="button button5"><a href="#">ボタンはこちら5</a></div>
