--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
+   
     <title>Document</title>
 </head>
 
@@ -32,7 +33,7 @@
                     <div class="contents_wrapper">
                         <h2>一番伝えたいことを書く</h2>
                         <p>リードリードリード</p>
-                        <div class="btn"> <a href="#">お問い合わせ</a></div>
+                        <div class="button top-button"> <a href="#">お問い合わせ</a></div>
                     </div>
                 </div>
             </div>
@@ -77,6 +78,7 @@
                 </div>
             </div>
         </section>
+
         <section class="news">
             <div class="inner">
                 <div class="title card-title">
@@ -110,12 +112,126 @@
                             <p class="txt"><a href="#"> ニュースニュースニュースニュースニュースニュースニュースニュースニュース</a></p>
                         </li>
                     </ul>
+
                     <div class="more"><a href="#">more</a></div>
                 </div>
-
             </div>
 
-            </div>
+        </section>
+
+
+        <section class="price">
+            <div class="inner">
+                <div class="title price-title">
+                    <h2>Price</h2>
+                </div>
+                <div class="price-wrap">
+                    <div class="price-img"> <img src="image/price-img@2x.png" alt=""></div>
+                    <div class="price-table">
+                        <table>
+                            <thead>
+                                <tr>
+                                    <th></th>
+                                    <th>column1</th>
+                                    <th>column2</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <th>row1</th>
+                                    <td>100円</td>
+                                    <td>100円</td>
+                                </tr>
+                                <tr>
+                                    <th>row2</th>
+                                    <td>6,000円</td>
+                                    <td>0円</td>
+                                </tr>
+                                <tr>
+                                    <th>row3</th>
+                                    <td><span class="table-row3-span">6,000円<br></span>※ 今だけ半額</td>
+                                    <td>0円</td>
+                                </tr>
+                                <tr>
+                                    <th>row4</th>
+                                    <td>100円</td>
+                                    <td>100円</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                        <p class="price-coment">※ 目安なので詳しくは<a href="#">お問い合わせ</a>ください。</p>
+                    </div>
+                </div>
+        </section>
+        <section class="access">
+            <div class="inner">
+                <div class="title price-title">
+                    <h2>Access</h2>
+                </div>
+                <div class="access-wrap">
+                    <div class="access-map"><iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3240.827853402472!2d139.7649307506265!3d35.68124053748203!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188bfbd89f700b%3A0x277c49ba34ed38!2z5p2x5Lqs6aeF!5e0!3m2!1sja!2sjp!4v1568582181159!5m2!1sja!2sjp"
+                            width="800" height="400" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+                    </div>
+                    <div class="access-txt">
+                        <dl>
+                            <dt>住所</dt>
+                            <dd>ほげほげほげのほげの場所</dd>
+                        </dl>
+                        <dl>
+                            <dt>アクセス</dt>
+                            <dd>〇〇駅から右に５分</dd>
+                        </dl>
+                    </div>
+
+                    <div class="button map-button"><a href="#">Googleマップで見る</a></div>
+                </div>
+
+            </div><!-- .inner -->
+        </section>
+        <section class="contact">
+            <div class="inner">
+                <div class="title contact-title">
+                    <h2>Contact</h2>
+                </div>
+
+                <form method="post" action="#"class="contact-form">
+                        <div class="form-group">
+                            <div class="form-label"> <label>お名前<span class="contact-span">必須</span></label></div>
+                            <div class="form-input">
+                                <input type="text" class="form-txt" placeholder="山田太郎">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                                        <div class="form-label"> <label>メールアドレス<span class="contact-span">必須</span></label></div>
+                                        <div class="form-input">
+                                            <input type="email" class="form-txt" placeholder="山田太郎">
+                                        </div>
+                                    </div>
+                        <div class="form-group">
+                                <div class="form-label"> <label>お問い合わせ種別<span class="contact-span">必須</span></label></div>
+                            <div class="form-input">
+                                <select required>
+                                    <option value=""hidden>ーーー</option>
+                                    <option value="お問い合わせ">お問い合わせ１</option>
+                                    <option value="お問い合わせ">お問い合わせ２</option>
+                                    <option value="ご意見・その他">ご意見・その他</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                                <div class="form-label"> <label>お問い合わせ<span class="contact-span">必須</span></label></div>
+                                <div class="form-input">
+                                        <textarea  class="message"name="message"　cols="50" rows="10" placeholder="お問い合わせを入力してください"></textarea>
+                            </div>
+                        </div>
+                        <div class="form-input">
+                            <div>
+                                    <div class="button form-button"><a href="#">送信する</a></div>
+                            </div>
+                        </div>
+                    </form>
+            </div><!-- .inner -->
         </section>
     </main>
 </body>
